--- a/MedicalWebsite.Applicationn/MedicalWebsite.Applicationn.csproj
+++ b/MedicalWebsite.Applicationn/MedicalWebsite.Applicationn.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="IService\" />
+    <Folder Include="Service\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
