--- a/MedicalWebsite.Models/MedicalWebsite.Models.csproj
+++ b/MedicalWebsite.Models/MedicalWebsite.Models.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.8" />
   </ItemGroup>
 
 </Project>
