--- a/MedicalPlatform/appsettings.json
+++ b/MedicalPlatform/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Database": "Data Source = .; Initial Catalog =MedicalCare; Integrated Security = True; Encrypt = True;encrypt=false"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "yoyoahmed108@gmail.com",
+    "SenderName": "Medical HealthCare",
+    "Username": "yoyoahmed108@gmail.com",
+    "Password": "vmne fkkz tswg ksst" // App password, not your regular Gmail password
   }
 }
