--- a/MedicalPlatform/MedicalPlatform.csproj
+++ b/MedicalPlatform/MedicalPlatform.csproj
@@ -12,15 +12,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\MedicalWebsite.Applicationn\MedicalWebsite.Applicationn.csproj" />
     <ProjectReference Include="..\MedicalWebsite.Context\MedicalWebsite.Context.csproj" />
+    <ProjectReference Include="..\MedicalWebsite.Infrastructure\MedicalWebsite.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
