--- a/.gitignore
+++ b/.gitignore
@@ -1023,3 +1023,21 @@ FodyWeavers.xsd
 /MedicalWebsite.Infrastructure/obj/Debug/net8.0/MedicalWebsite.Infrastructure.GeneratedMSBuildEditorConfig.editorconfig
 /MedicalWebsite.Models/obj/Debug/net8.0/MedicalWebsite.Models.assets.cache
 /MedicalWebsite.Models/obj/Debug/net8.0/MedicalWebsite.Models.GeneratedMSBuildEditorConfig.editorconfig
+/MedicalWebsite.Applicationn/obj/Debug/net8.0/MedicalWebsite.Applicationn.GeneratedMSBuildEditorConfig.editorconfig
+/MedicalWebsite.Context/obj/Debug/net8.0/MedicalWebsite.Context.AssemblyInfoInputs.cache
+/MedicalWebsite.Context/obj/MedicalWebsite.Context.csproj.nuget.dgspec.json
+/MedicalWebsite.DTOS/obj/Debug/net8.0/MedicalWebsite.DTOS.assets.cache
+/MedicalWebsite.DTOS/obj/MedicalWebsite.DTOS.csproj.nuget.dgspec.json
+/MedicalWebsite.DTOS/obj/MedicalWebsite.DTOS.csproj.nuget.g.props
+/MedicalWebsite.Context/obj/MedicalWebsite.Context.csproj.nuget.g.props
+/MedicalWebsite.Context/obj/project.assets.json
+/MedicalWebsite.Context/obj/project.nuget.cache
+/MedicalWebsite.DTOS/obj/project.assets.json
+/MedicalWebsite.DTOS/obj/project.nuget.cache
+/MedicalWebsite.Models/obj/project.nuget.cache
+/MedicalWebsite.Models/obj/MedicalWebsite.Models.csproj.nuget.g.props
+/MedicalWebsite.Models/obj/MedicalWebsite.Models.csproj.nuget.dgspec.json
+/MedicalWebsite.Models/obj/project.assets.json
+/MedicalWebsite.Models/obj/Debug/net8.0/MedicalWebsite.Models.AssemblyInfoInputs.cache
+/MedicalWebsite.Context/obj/Debug/net8.0/MedicalWebsite.Context.AssemblyInfo.cs
+/MedicalWebsite.Models/obj/Debug/net8.0/MedicalWebsite.Models.AssemblyInfo.cs
