--- a/MedicalPlatform/appsettings.json
+++ b/MedicalPlatform/appsettings.json
@@ -15,6 +15,6 @@
     "SenderEmail": "yoyoahmed108@gmail.com",
     "SenderName": "Medical HealthCare",
     "Username": "yoyoahmed108@gmail.com",
-    "Password": "vmne fkkz tswg ksst" // App password, not your regular Gmail password
+    "Password": "vmne fkkz tswg ksst" 
   }
 }
