--- a/MedicalPlatform/appsettings.json
+++ b/MedicalPlatform/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": "Data Source = .; Initial Catalog =MedicalCare; Integrated Security = True; Encrypt = True;encrypt=false"
+    "Database": "Data Source = .; Initial Catalog =MedicalCare3; Integrated Security = True; Encrypt = True;encrypt=false"
+   
   },
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
