--- a/MedicalWebsite.Context/MedicalWebsite.Context.csproj
+++ b/MedicalWebsite.Context/MedicalWebsite.Context.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\MedicalWebsite.Models\MedicalWebsite.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
